--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <header class="header">
             <div class="logo">PLC</div>
             <h1 class="title">교리교육 조 배치 검색</h1>
-            <p class="subtitle">이름과 전화번호 뒷자리를 입력해주세요</p>
+            <p class="subtitle">이름과 전화번호 뒷 4자리를 입력해주세요</p>
         </header>
 
         <!-- 검색 폼 -->
@@ -93,4 +93,5 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
