--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
     <div class="container">
         <!-- 헤더 -->
         <header class="header">
-            <div class="logo">PLC</div>
+            <div class="logo-container">
+                <div class="logo-text">PLC</div>
+                <div class="logo-subtitle">PRACTICAL LEADERSHIP CHURCH</div>
+            </div>
             <h1 class="title">교리교육 조 배치 검색</h1>
             <p class="subtitle">이름과 전화번호 뒷 4자리를 입력해주세요</p>
         </header>
@@ -41,7 +44,6 @@
 
             <button class="search-btn" id="searchBtn">
                 <span class="btn-text">조 확인하기</span>
-                <span class="btn-icon">→</span>
             </button>
         </div>
 
@@ -93,5 +95,4 @@
     <script src="script.js"></script>
 </body>
 </html>
-
 
