--- a/index.html
+++ b/index.html
@@ -10,24 +10,34 @@
     <div class="container">
         <!-- 헤더 -->
         <header class="header">
-        <div class="theme-toggle-wrapper">
-            <svg class="theme-icon" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                <circle cx="12" cy="12" r="5"></circle>
-                <line x1="12" y1="1" x2="12" y2="3"></line>
-                <line x1="12" y1="21" x2="12" y2="23"></line>
-                <line x1="4.22" y1="4.22" x2="5.64" y2="5.64"></line>
-                <line x1="18.36" y1="18.36" x2="19.78" y2="19.78"></line>
-                <line x1="1" y1="12" x2="3" y2="12"></line>
-                <line x1="21" y1="12" x2="23" y2="12"></line>
-                <line x1="4.22" y1="19.78" x2="5.64" y2="18.36"></line>
-                <line x1="18.36" y1="5.64" x2="19.78" y2="4.22"></line>
-            </svg>
-            <button class="theme-toggle" id="themeToggle" aria-label="테마 전환">
-                <div class="toggle-track">
-                    <div class="toggle-thumb"></div>
+            <!-- 우측 상단 버튼들 -->
+            <div class="header-buttons">
+                <button class="icon-btn" id="adminBtn" aria-label="관리자 모드" title="관리자 모드">
+                    <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                        <path d="M12 2L2 7l10 5 10-5-10-5z"></path>
+                        <path d="M2 17l10 5 10-5"></path>
+                        <path d="M2 12l10 5 10-5"></path>
+                    </svg>
+                </button>
+                <div class="theme-toggle-wrapper">
+                    <svg class="theme-icon" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                        <circle cx="12" cy="12" r="5"></circle>
+                        <line x1="12" y1="1" x2="12" y2="3"></line>
+                        <line x1="12" y1="21" x2="12" y2="23"></line>
+                        <line x1="4.22" y1="4.22" x2="5.64" y2="5.64"></line>
+                        <line x1="18.36" y1="18.36" x2="19.78" y2="19.78"></line>
+                        <line x1="1" y1="12" x2="3" y2="12"></line>
+                        <line x1="21" y1="12" x2="23" y2="12"></line>
+                        <line x1="4.22" y1="19.78" x2="5.64" y2="18.36"></line>
+                        <line x1="18.36" y1="5.64" x2="19.78" y2="4.22"></line>
+                    </svg>
+                    <button class="theme-toggle" id="themeToggle" aria-label="테마 전환">
+                        <div class="toggle-track">
+                            <div class="toggle-thumb"></div>
+                        </div>
+                    </button>
                 </div>
-            </button>
-        </div>
+            </div>
             
             <div class="logo-container">
                 <div class="logo-text">PLC</div>
@@ -116,6 +126,28 @@
         <button class="image-modal-close" id="modalClose">✕</button>
         <img id="modalImage" src="" alt="배치도 확대">
         <div class="image-modal-hint">클릭하거나 ESC를 눌러 닫기</div>
+    </div>
+
+    <!-- 관리자 로그인 모달 -->
+    <div class="admin-login-modal" id="adminLoginModal">
+        <div class="admin-login-content">
+            <div class="admin-login-header">
+                <h2>관리자 로그인</h2>
+                <button class="admin-login-close" id="adminLoginClose">✕</button>
+            </div>
+            <form class="admin-login-form" id="adminLoginForm">
+                <div class="input-group">
+                    <label for="adminId">아이디</label>
+                    <input type="text" id="adminId" autocomplete="username" required>
+                </div>
+                <div class="input-group">
+                    <label for="adminPassword">비밀번호</label>
+                    <input type="password" id="adminPassword" autocomplete="current-password" required>
+                </div>
+                <button type="submit" class="admin-login-btn">로그인</button>
+                <div class="admin-login-error" id="adminLoginError" style="display: none;"></div>
+            </form>
+        </div>
     </div>
 
     <script src="script.js"></script>
