--- a/index.html
+++ b/index.html
@@ -14,9 +14,8 @@
             <div class="header-buttons">
                 <button class="icon-btn" id="adminBtn" aria-label="관리자 모드" title="관리자 모드">
                     <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                        <path d="M12 2L2 7l10 5 10-5-10-5z"></path>
-                        <path d="M2 17l10 5 10-5"></path>
-                        <path d="M2 12l10 5 10-5"></path>
+                        <path d="M20 21v-2a4 4 0 0 0-4-4H8a4 4 0 0 0-4 4v2"></path>
+                        <circle cx="12" cy="7" r="4"></circle>
                     </svg>
                 </button>
                 <div class="theme-toggle-wrapper">
