--- a/admin.html
+++ b/admin.html
@@ -41,6 +41,7 @@
                             <polyline points="16 17 21 12 16 7"></polyline>
                             <line x1="21" y1="12" x2="9" y2="12"></line>
                         </svg>
+                        <span class="logout-text">로그아웃</span>
                     </button>
                 </div>
             </div>
