--- a/교리교육 조배치 검색기/index.html
+++ b/교리교육 조배치 검색기/index.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PL교회 교리교육 조배치 검색</title>
     <link rel="stylesheet" href="style.css">
+    
+    <!-- 휴강 페이지로 임시 리다이렉트 (정상 운영 시 아래 script 태그 삭제) -->
+    <script>
+        window.location.href = 'break.html';
+    </script>
 </head>
 <body>
     <div class="container">
@@ -168,6 +173,60 @@
     </div>
 
     <script src="script.js"></script>
+
+    <!-- 휴강 공지 모달 (필요시 아래 주석을 해제하세요) -->
+    <!--
+    <div id="breakNoticeModal" style="position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.7); display: flex; align-items: center; justify-content: center; z-index: 10000; animation: fadeIn 0.3s ease;">
+        <div style="background: white; border-radius: 20px; padding: 40px; max-width: 500px; width: 90%; box-shadow: 0 10px 40px rgba(0,0,0,0.3); animation: slideUp 0.4s ease;">
+            <div style="text-align: center;">
+                <div style="font-size: 60px; margin-bottom: 20px;">📢</div>
+                <h2 style="font-size: 28px; color: #333; margin-bottom: 15px; font-weight: 700;">교리교육 휴강 안내</h2>
+                <div style="background: #f0f7ff; padding: 25px; border-radius: 12px; margin: 25px 0;">
+                    <p style="font-size: 18px; color: #1e40af; font-weight: 600; margin-bottom: 10px;">12월 28일 (토)</p>
+                    <p style="font-size: 16px; color: #555; line-height: 1.6;">연말 행사로 인해<br>이번 주 교리교육은 휴강합니다</p>
+                </div>
+                <p style="font-size: 14px; color: #666; margin-bottom: 25px;">다음 주에 뵙겠습니다 🙏</p>
+                <button onclick="closeBreakNotice()" style="background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); color: white; border: none; padding: 15px 40px; border-radius: 10px; font-size: 16px; font-weight: 600; cursor: pointer; transition: all 0.3s; box-shadow: 0 4px 15px rgba(102, 126, 234, 0.4);">
+                    확인
+                </button>
+            </div>
+        </div>
+    </div>
+
+    <style>
+        @keyframes fadeIn {
+            from { opacity: 0; }
+            to { opacity: 1; }
+        }
+        @keyframes slideUp {
+            from { 
+                opacity: 0;
+                transform: translateY(30px);
+            }
+            to { 
+                opacity: 1;
+                transform: translateY(0);
+            }
+        }
+        #breakNoticeModal button:hover {
+            transform: translateY(-2px);
+            box-shadow: 0 6px 20px rgba(102, 126, 234, 0.6);
+        }
+    </style>
+
+    <script>
+        function closeBreakNotice() {
+            document.getElementById('breakNoticeModal').style.display = 'none';
+        }
+        
+        // ESC 키로도 닫을 수 있게
+        document.addEventListener('keydown', function(e) {
+            if (e.key === 'Escape') {
+                closeBreakNotice();
+            }
+        });
+    </script>
+    -->
 </body>
 </html>
 
