--- a/교리교육 조배치 검색기/index.html
+++ b/교리교육 조배치 검색기/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PL교회 교리교육 조배치 검색</title>
-    <link rel="stylesheet" href="style.css">
     
-    <!-- 휴강 페이지로 임시 리다이렉트 (정상 운영 시 아래 script 태그 삭제) -->
-    <script>
-        window.location.href = 'break.html';
-    </script>
+    <!-- 휴강 페이지로 임시 리다이렉트 (정상 운영 시 아래 두 줄 삭제) -->
+    <meta http-equiv="refresh" content="0; url=break.html">
+    <script>window.location.replace('break.html');</script>
+    
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
